--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniele Lessio - Graphic Designer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,7 @@
     <script src="/assets/js/scripts.js"></script>
 </head>
 <body>
+
   <!-- <button id="emoji" onclick="changeButtonText()">👋😀a</button> -->
 
 
@@ -28,7 +30,7 @@
         </div>
     </nav>
     
- <!-- @note HERO  -->
+    <!-- HERO -->
     <section class="hero">
         <div class="tag">UX/UI Designer</div>
         <h1 class="intro-text">
@@ -52,7 +54,7 @@
           <div class="progetto-1">
               <div class="project-label">
                   <h2 class="label-text">Sunnee</h2>
-                  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/53807233b8aae38184c28023152b53f78ff7b3ed15179042bff35662c1e9bfbc?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt="Icona freccia" class="project-icon">
+                  <img class="label-icon" src="https://cdn.builder.io/api/v1/image/assets/TEMP/53807233b8aae38184c28023152b53f78ff7b3ed15179042bff35662c1e9bfbc?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt="Icona freccia" >
               </div>
               <img class="project-image" src="/assets/img/ricongiunzione ines.jpg" alt="Anteprima primo progetto">
           </div>
@@ -69,12 +71,6 @@
         </div>
       
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script>
-        function toggleDarkMode() {
-            document.body.classList.toggle("dark-mode");
-        }
-    </script>   
 
 
 </body>
