--- a/index.html
+++ b/index.html
@@ -60,16 +60,11 @@
           </div>
         </div>
       
-        <div class="project-card">
-          <div class="progetto-2">
-              <div class="project-label">
-                  <h2 class="label-text">Sunnee</h2>
-                  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/53807233b8aae38184c28023152b53f78ff7b3ed15179042bff35662c1e9bfbc?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt="Icona freccia" class="project-icon">
-              </div>
-              <img class="project-image" src="/assets/img/ig post 01.png" alt="Anteprima secondo progetto">
-          </div>
+        <div class="card">
+          <div class="card__img" style="background-image: url('http://afmarchetti.github.io/alux/image.jpg');"></div>
+          <h3> Lorem </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quidem provident totam, possimus reprehenderit repellat. Omnis, iusto officiis harum reprehenderit enim asperiores ex ducimus. Possimus quae, numquam at molestias aut?</p>
         </div>
-      
     </section>
 
 
