--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="menu-container navbar-right">
             <ul><label class="toggle-button" ><img src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></label></ul>
             <ul><button class="btn btn-contact">Contattami</button></ul>
-            <ul><a href="https://lessiodaniele.github.io/Personal-Portfolio/" class="about-link">Su di me</a></ul>
+            <ul><a href="https://lessiodaniele.github.io/personal-portfolio/" class="about-link">Su di me</a></ul>
         </li>
         </div>
   </nav>
