--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <section class="links">
       <div class="social-icons">
         <a class="link-linkedin" href="https://www.linkedin.com/in/daniele-lessio/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/Linkedin.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="assets/img/Linkedin.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.behance.net/danielelessio" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/Behance.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="assets/img/Behance.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.pinterest.it/danielelessio/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/Pinterest.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
+          <img src="assets/img/Pinterest.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
       </div>
     </section>
   </section>
@@ -57,7 +57,7 @@
                   <h2 class="label-text">Sunnee</h2>
                   <img class="label-icon" src="https://cdn.builder.io/api/v1/image/assets/TEMP/53807233b8aae38184c28023152b53f78ff7b3ed15179042bff35662c1e9bfbc?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt="Icona freccia" >
               </div>
-              <img class="project-image" src="/assets/img/ricongiunzione ines.jpg" alt="Anteprima primo progetto">
+              <img class="project-image" src="assets/img/ricongiunzione ines.jpg" alt="Anteprima primo progetto">
           </div>
         </div>
       
