--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section class="container col-6 projects-section">
     <div class="projects row">
       <div class="card col">
-        <div class="card__img" style="background-image: url('/assets/img/Tavola\ disegno\ 7.svg');"></div>
+        <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
         <div class="project-label">
           <h3 class="label-text">Sunnee →</h3>
         </div>
@@ -84,6 +84,15 @@
   </section>
   <a href="/pages/altri-progetti/"><div class="altro">--- altri progetti ---</div></a>
 
+
+<!-- FOOTER -->
+  <FOOTER>
+    <P>ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT</P>
+    <ul class="menu-container">
+      <li><a class="btn" href="/pages/contact/">Contattami</a>
+      <li><a href="/pages/about/" class="about-link">Su di me</a></li>
+    </ul>
+  </FOOTER>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
