--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
   <nav class="nav-container ">
     <a href="https://lessiodaniele.github.io/Personal-Portfolio/"><img class="logo"src="assets/img/personal-logo.png" alt="Logo personale"></a>
     <ul class="menu-container">
-      <li><img class="toggle-button" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li>
+      <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
       <li><a class="btn" href="/pages/contact/">Contattami</a>
-      <li><a href="/pages/about/" class="about-link">Su di me</a></li>
+      <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
     </ul>
   </nav>
 
   <!-- HERO -->
   <div class="hero container col-6 my-5">
-    <div class="tag">UX/UI Designer</div>
+    <div class="tags">
+      <div class="tag-1">Visual Designer</div>
+      <div class="tag-2">UX/UI Designer</div>
+
+    </div>
     <h1 class="intro-text">Sono Daniele, <br/> piacere di presentarmi</h1>
     
     <section class="links">
@@ -46,31 +50,37 @@
   
   <!-- PROGETTI -->
   <section class="container col-6 projects-section">
+
+    <!-- TOGLI TARGET BLANK PER APRIRE LINK NELLA STESSA SCHEDA -->
     <div class="projects row">
-      <div class="card col">
-        <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
-        <div class="project-label">
-          <h3 class="label-text">Sunnee →</h3>
-        </div>
-      </div>
-      <div class="card col">
-        <div class="card__img" style="background-image: url('http://afmarchetti.github.io/alux/image.jpg');"></div>
-        <h3> Ecodream → </h3>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
+
+      <a class="card col" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
+          <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
+          <div class="project-label">
+            <h3 class="label-text">Sunnee ↗</h3>
+            <p>Branding per un brand di abbigliamento sostenibile.</p>
+          </div>
+      </a>
+      
+      <a  class="card col" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
+        <div class="card__img" style="background-image: url('/assets/img/copertina-ecodream.svg');"></div>
+        <h3> Ecodream ↗ </h3>
+        <p>UX study per un brand di borse sostenibili.</p>
+      </a>
+
     </div>
     <div class="row">
 
-      <div class="card col">
-        <div class="card__img" style="background-image: url('http://afmarchetti.github.io/alux/image.jpg');"></div>
-        <h3> Dea della pizza → </h3>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
-      <div class="card col">
-        <div class="card__img" style="background-image: url('http://afmarchetti.github.io/alux/image.jpg');"></div>
-        <h3> Ecodream → </h3>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
+      <a class="card col" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
+        <div class="card__img" style="background-image: url('/assets/img/Logo-dea.svg');"></div>
+        <h3> Dea della pizza ↗ </h3>
+        <p>Redesign logo pizzeria.</p>
+      </a>
+      <a class="card col" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
+        <div class="card__img" style="background-image: url('/assets/img/copertina-curiosity-academy.svg');"></div>
+        <h3> Curiosity Academy ↗ </h3>
+        <p>Progetto contest universistario.</p>
+      </a>
     </div>
     <!-- <div class="project-card col-sm-6">
       <div class="progetto-1">
@@ -82,20 +92,20 @@
       </div>
     </div> -->
   </section>
-  <a href="/pages/altri-progetti/"><div class="altro">--- altri progetti ---</div></a>
+  <a href="https://www.behance.net/danielelessio" class="altro"><div>⎯⎯⎯⎯ Tutti i progetti ↗ ⎯⎯⎯⎯</div></a>
 
 
 <!-- FOOTER -->
   <FOOTER>
-    <P>ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT</P>
-    <ul class="menu-container">
-      <li><a class="btn" href="/pages/contact/">Contattami</a>
-      <li><a href="/pages/about/" class="about-link">Su di me</a></li>
-    </ul>
+    <div class="footer">
+      <P>ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT <br>Autorizzo al trattamento dei dati personali contenuti nel mio curriculum vitae in base Reg. 2016/679/UE.</P>
+      <ul class="menu-container">
+        <li><a href="/assets/img/CV.pdf" download>Scarica CV ↓</a></li>
+      </ul>
+    </div>
   </FOOTER>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <!-- <script> function toggleDarkMode() {document.body.classList.toggle("dark-mode");}</script>  -->
 </body>
 </html>
