--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,101 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Supported HTML Form Controls in Bootstrap</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-// Self-executing function
-(function() {
-    'use strict';
-    window.addEventListener('load', function() {
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.getElementsByClassName('needs-validation');
-        // Loop over them and prevent submission
-        var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', function(event) {
-                if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                }
-                form.classList.add('was-validated');
-            }, false);
-        });
-    }, false);
-})();
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/style-form.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Form di Contatto</title>
 </head>
-<body class="container-sm">
-<div class="m-5">
-    <h1 class="pb-3 mb-4">Registration Form</h1>
-    <form class="needs-validation" action="/examples/actions/confirmation.php" method="post" novalidate>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="firstName">First Name:</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="lastName">Last Name:</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="emailAddress">Email Address:</label>
-            <div class="col-sm-9">
-                <input type="email" class="form-control" id="emailAddress" placeholder="Email Address" required>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="phoneNumber">Mobile Number:</label>
-            <div class="col-sm-9">
-                <input type="number" class="form-control" id="phoneNumber" placeholder="Phone Number" required>
-            </div>
-        </div>        
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="postalAddress">Postal Address:</label>
-            <div class="col-sm-9">
-                <textarea rows="3" class="form-control" id="postalAddress" placeholder="Postal Address" required></textarea>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label" for="ZipCode">Zip Code:</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" id="ZipCode" placeholder="Zip Code" required>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-3 col-form-label">Gender:</label>
-            <div class="col-sm-9 mt-2">
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="gender" id="radioMale">
-                    <label class="form-check-label" for="radioMale">Male</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="gender" id="radioFemale">
-                    <label class="form-check-label" for="radioFemale">Female</label>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-sm-9 offset-sm-3">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="checkAgree" value="agree">
-                    <label class="form-check-label" for="checkAgree">I agree to the <a href="#">Terms and Conditions</a></label>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-sm-9 offset-sm-3">
-                <input type="submit" class="btn btn-primary" value="Submit">
-                <input type="reset" class="btn btn-secondary ms-2" value="Reset">
-            </div>
-        </div>
+<body>
+    <div class="container col-4 my-5"><a href="https://lessiodaniele.github.io/personal-portfolio/">← torna indietro</a></div>
+    <form action="https://formcarry.com/s/IP0ttKJh4VI" method="POST" class="container col-4 my-5">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="fullName" required>
+        <label for="email">Indirizzo Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Messaggio:</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <button type="submit">Invia</button>
     </form>
-</div>
+    
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
