--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="https://lessiodaniele.github.io/Personal-Portfolio/"><img class="logo"src="assets/img/personal-logo.png" alt="Logo personale"></a>
     <ul class="menu-container">
       <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
-      <li><a class="btn" href="/pages/contact/">Contattami</a>
+      <li><a class="btn" href="pages/contact/">Contattami</a>
       <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
     </ul>
   </nav>
