--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
 
   <!-- HERO -->
-  <div class="hero container col-6 my-5">
+  <div class="hero container col-sm-6 p-2 my-5">
     <div class="tags">
       <div class="tag-1">Visual Designer</div>
       <div class="tag-2">UX/UI Designer</div>
@@ -49,12 +49,12 @@
   </div>
   
   <!-- PROGETTI -->
-  <section class="container col-6 projects-section">
+  <section class="container col-sm-6 projects-section">
 
     <!-- TOGLI TARGET BLANK PER APRIRE LINK NELLA STESSA SCHEDA -->
     <div class="projects row">
 
-      <a class="card col" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
+      <a class="card col-md-6" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
           <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
           <div class="project-label">
             <h3 class="label-text">Sunnee ↗</h3>
@@ -62,7 +62,7 @@
           </div>
       </a>
       
-      <a  class="card col" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
+      <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
         <div class="card__img" style="background-image: url('/assets/img/copertina-ecodream.svg');"></div>
         <h3> Ecodream ↗ </h3>
         <p>UX study per un brand di borse sostenibili.</p>
@@ -71,12 +71,12 @@
     </div>
     <div class="row">
 
-      <a class="card col" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
+      <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
         <div class="card__img" style="background-image: url('/assets/img/Logo-dea.svg');"></div>
         <h3> Dea della pizza ↗ </h3>
         <p>Redesign logo pizzeria.</p>
       </a>
-      <a class="card col" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
+      <a class="card col-md-6" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
         <div class="card__img" style="background-image: url('/assets/img/copertina-curiosity-academy.svg');"></div>
         <h3> Curiosity Academy ↗ </h3>
         <p>Progetto contest universistario.</p>
