--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
-        <div class="card__img" style="background-image: url('/assets/img/copertina-ecodream.svg');"></div>
+        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.svg');"></div>
         <h3> Ecodream ↗ </h3>
         <p>UX study per un brand di borse sostenibili.</p>
       </a>
@@ -72,12 +72,12 @@
     <div class="row">
 
       <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
-        <div class="card__img" style="background-image: url('/assets/img/Logo-dea.svg');"></div>
+        <div class="card__img" style="background-image: url('assets/img/Logo-dea.svg');"></div>
         <h3> Dea della pizza ↗ </h3>
         <p>Redesign logo pizzeria.</p>
       </a>
       <a class="card col-md-6" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
-        <div class="card__img" style="background-image: url('/assets/img/copertina-curiosity-academy.svg');"></div>
+        <div class="card__img" style="background-image: url('assets/img/copertina-curiosity-academy.svg');"></div>
         <h3> Curiosity Academy ↗ </h3>
         <p>Progetto contest universistario.</p>
       </a>
@@ -98,9 +98,9 @@
 <!-- FOOTER -->
   <FOOTER>
     <div class="footer">
-      <P>ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT <br>Autorizzo al trattamento dei dati personali contenuti nel mio curriculum vitae in base Reg. 2016/679/UE.</P>
+      <P class="footer-info">ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT <br>Autorizzo al trattamento dei dati personali contenuti nel mio curriculum vitae in base Reg. 2016/679/UE.</P>
       <ul class="menu-container">
-        <li><a href="/assets/img/CV.pdf" download>Scarica CV ↓</a></li>
+        <li><a href="assets/img/CV.pdf" download>Scarica CV ↓</a></li>
       </ul>
     </div>
   </FOOTER>
