--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -9,14 +9,14 @@
     <title>Form di Contatto</title>
 </head>
 <body>
-    <div class="container col-4 my-5"><a href="https://lessiodaniele.github.io/personal-portfolio/">← torna indietro</a></div>
-    <form action="https://formcarry.com/s/IP0ttKJh4VI" method="POST" class="container col-4 my-5">
+    <div class="container col-sm-6 col-md-4 my-3"><a href="https://lessiodaniele.github.io/personal-portfolio/">← torna indietro</a></div>
+    <form class="container col-sm-6 col-md-4 my-5" action="https://formcarry.com/s/IP0ttKJh4VI" method="POST" >
         <label for="name">Nome:</label>
         <input type="text" id="name" name="fullName" required>
         <label for="email">Indirizzo Email:</label>
         <input type="email" id="email" name="email" required>
         <label for="message">Messaggio:</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <textarea name="message" id="message" rows="5"></textarea>
         <button type="submit">Invia</button>
     </form>
     
