aggiornato link CV

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="footer">
       <P class="footer-info">ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT <br>Autorizzo al trattamento dei dati personali contenuti nel mio curriculum vitae in base Reg. 2016/679/UE.</P>
       <ul class="menu-container">
-        <li><a href="assets/img/CV.pdf" download>Scarica CV ↓</a></li>
+        <li><a href="assets/img/CV-Daniele-Lessio.pdf" download>Scarica CV ↓</a></li>
       </ul>
     </div>
   </FOOTER>
