--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style-form.css">
+    <link rel="stylesheet" href="/assets/css/style-form.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Form di Contatto</title>
 </head>
 <body>
-    <div class="container col-sm-6 col-md-4 my-3"><a href="https://lessiodaniele.github.io/personal-portfolio/">← torna indietro</a></div>
-    <form class="container col-sm-6 col-md-4 my-5" action="https://formcarry.com/s/IP0ttKJh4VI" method="POST" >
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="fullName" required>
-        <label for="email">Indirizzo Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="message">Messaggio:</label>
-        <textarea name="message" id="message" rows="5"></textarea>
-        <button type="submit">Invia</button>
-    </form>
+    <main class="main container-sm-8 offset-sm-2">
+        <div class="indietro"><a href="https://lessiodaniele.github.io/personal-portfolio/">← torna indietro</a></div>
+        <form class="col-sm-6 col-md-8 m-3" action="https://formcarry.com/s/IP0ttKJh4VI" method="POST" >
+            <div class="row my-3">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="fullName" required>
+            </div>
+            <div class="row my-3">
+                <label for="email">Indirizzo Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="row my-3">
+                <label for="message">Messaggio:</label>
+                <textarea name="message" id="message" rows="5"></textarea>
+            </div>
+            <button type="submit">Invia</button>
+        </form>
+
+    </main>
     
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
