--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="links">
       <div class="social-icons">
         <a class="link-linkedin" href="https://www.linkedin.com/in/daniele-lessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/Linkedin.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="assets/img/Linkedin.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
         <a href="https://www.behance.net/danielelessio" target="_blank" rel="noopener noreferrer">
           <img src="assets/img/Behance.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.pinterest.it/danielelessio/" target="_blank" rel="noopener noreferrer">
