--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <script src="assets/js/scripts.js"></script>
+    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
+    <script src="./assets/js/scripts.js"></script>
 </head>
 <body>
   
@@ -22,7 +22,7 @@
     <a href="https://lessiodaniele.github.io/Personal-Portfolio/"><img class="logo"src="assets/img/personal-logo.png" alt="Logo personale"></a>
     <ul class="menu-container">
       <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
-      <li><a class="btn" href="pages/contact/">Contattami</a>
+      <li><a class="btn" href="./pages/contact/">Contattami</a>
       <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
     </ul>
   </nav>
@@ -39,7 +39,7 @@
     <section class="links">
       <div class="social-icons">
         <a class="link-linkedin" href="https://www.linkedin.com/in/daniele-lessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/Linkedin.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="assets/img/Linkedin.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
         <a href="https://www.behance.net/danielelessio" target="_blank" rel="noopener noreferrer">
           <img src="assets/img/Behance.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.pinterest.it/danielelessio/" target="_blank" rel="noopener noreferrer">
