--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="tag-2">UX/UI Designer</div>
 
     </div>
-    <h1 class="intro-text">Sono Daniele, <br/> piacere di presentarmi</h1>
+    <h1 class="intro-text">Sono Daniele ☺ <br/></h1><h2>designer con esperienza sia lato web sia cartaceo.</h2> 
     
     <section class="links">
       <div class="social-icons">
@@ -58,14 +58,14 @@
           <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
           <div class="project-label">
             <h3 class="label-text">Sunnee ↗</h3>
-            <p>Branding per un brand di abbigliamento sostenibile.</p>
+            <p>Branding ⋅ brand di abbigliamento sostenibile.</p>
           </div>
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.svg');"></div>
         <h3> Ecodream ↗ </h3>
-        <p>UX study per un brand di borse sostenibili.</p>
+        <p>UX study ⋅ brand di borse sostenibili.</p>
       </a>
 
     </div>
@@ -74,7 +74,7 @@
       <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/Logo-dea.svg');"></div>
         <h3> Dea della pizza ↗ </h3>
-        <p>Redesign logo pizzeria.</p>
+        <p>Redesign ⋅ logo pizzeria.</p>
       </a>
       <a class="card col-md-6" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/copertina-curiosity-academy.svg');"></div>
