--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="projects row">
 
       <a class="card col-md-6" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
-          <div class="card__img" style="background-image: url('assets/img/Tavola\ disegno\ 7.svg');"></div>
+          <div class="card__img" style="background-image: url('assets/img/copertina-sunnee.jpg');"></div>
           <div class="project-label">
             <h3 class="label-text">Sunnee ↗</h3>
             <p>Branding ⋅ brand di abbigliamento sostenibile.</p>
@@ -62,7 +62,7 @@
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
-        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.svg');"></div>
+        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.png');"></div>
         <h3> Ecodream ↗ </h3>
         <p>UX study ⋅ brand di borse sostenibili.</p>
       </a>
