sostituzione immagine ecodream

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
-        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.png');"></div>
+        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.jpg');"></div>
         <h3> Ecodream ↗ </h3>
         <p>UX study ⋅ brand di borse sostenibili.</p>
       </a>
