--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="tag-1">Visual Designer</div>
       <div class="tag-2">UX/UI Designer</div>
     </div>
-    <h1 class="intro-text">Sono Daniele ☺ <br/></h1><h2>designer con esperienza sia lato web sia cartaceo.</h2> 
+    <h1 class="intro-text">Sono Daniele ☺ <br/></h1><h2>Graphic designer con esperienza in <br>e-commerce e stampa.</h2> 
     
     <section class="links">
       <div class="social-icons">
