aggiunta sezione su di me

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <script src="./assets/js/scripts.js"></script>
 </head>
@@ -22,13 +21,14 @@
     <a href="https://lessiodaniele.github.io/personal-portfolio/"><img class="logo"src="assets/img/personal-logo.png" alt="Logo personale"></a>
     <ul class="menu-container">
       <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
+      <li><a class="about-link" href="./pages/about/">Su di me</a></li>
       <li><a class="btn" href="./pages/contact/">Contattami</a>
       <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
     </ul>
   </nav>
 
   <!-- HERO -->
-  <div class="hero container col-sm-6 p-2 my-5">
+  <div class="hero container col-sm-6 my-5">
     <div class="tags">
       <div class="tag-1">Visual Designer</div>
       <div class="tag-2">UX/UI Designer</div>
@@ -51,8 +51,7 @@
   <section class="container col-sm-6 projects-section">
 
     <!-- TOGLI TARGET BLANK PER APRIRE LINK NELLA STESSA SCHEDA -->
-    <div class="projects row">
-
+    <div class="row">
       <a class="card col-md-6" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
           <div class="card__img" style="background-image: url('assets/img/copertina-sunnee.jpg');"></div>
           <div class="project-label">
@@ -69,7 +68,6 @@
 
     </div>
     <div class="row">
-
       <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/Logo-dea.svg');"></div>
         <h3> Dea della pizza ↗ </h3>
