aggiunta immagine cv

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -19,12 +19,15 @@
         <ul class="menu-container">
             <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
             <li><a class="about-link" href="../../pages/about/">Su di me</a></li>
-            <li><a class="btn" href="../../pages/contact/">Contattami</a>
-                <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
-            </ul>
-        </nav>
+            <li><a href="../../pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
+        </ul>
+    </nav>
+
+    <div class="container-fluid cv-image mt-3">
+        <img src="../../assets/img/foto-cv.jpg" class="img-fluid" alt="Immagine a larghezza intera">
+    </div>
         <div class="container offset-sm-3 my-5">
-            <div class="row col-sm-8 ">
+            <div class="row col-sm-8">
             <!-- Colonna 1 -->
             <div class="col-md-6">
                 <h2>
@@ -49,11 +52,13 @@
                 <h2 class="mt-4">
                     Per farlo
                 </h2>
-                <p>
-                    Adobe Creative Suite
-                    3D Virtual tour, Figma, Wordpress.
-                    <br>Soon --> Blender, Spline.
-                </p>
+                <ul>
+                    <li>Adobe Creative Suite</li>
+                    <li>Figma</li>
+                    <li>Wordpress</li>
+                    <li>3D Virtual tour</li>
+                    <li>Soon --> Blender & Spline</li>
+                </ul>
                 <div class="row">
                     <h2 class="mt-4">
                         Interessi
@@ -109,7 +114,10 @@
                         <img class="social-icons linkedin" src="../../assets/img/Linkedin.svg" alt="collegamento a linkedin" /> Linkedin</a>
                     </div>
             </div>
+            <div class="cv">
+                <a href="../../assets/img/CV-Daniele-Lessio.pdf" download><button class="py-1 px-3">Scarica CV ↓</button></a>
 
+            </div>
     
         </div>
             
