--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
-    <script src="./assets/js/scripts.js"></script>
+    <script defer src="./assets/js/scripts.js"></script>
 </head>
 <body>
   
@@ -22,8 +22,7 @@
     <ul class="menu-container">
       <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
       <li><a class="about-link" href="./pages/about/">Su di me</a></li>
-      <li><a class="btn" href="./pages/contact/">Contattami</a>
-      <!-- <li><a href="/pages/about/" class="about-link">Su di me</a></li> -->
+      <li><a href="./pages/contact/"><button>Contattami</button></a></li>
     </ul>
   </nav>
 
