--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
     <script defer src="./assets/js/scripts.js"></script>
 </head>
 <body>
-  
-  <!-- <button id="emoji" onclick="changeButtonText()">👋😀a</button> -->
   <nav class="nav-container ">
     <a href="https://lessiodaniele.github.io/personal-portfolio/"><img class="logo"src="assets/img/personal-logo.png" alt="Logo personale"></a>
     <ul class="menu-container">
-      <!-- <li><img class="toggle-dark" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a21eeccc8f1968c3eb0c3e312842b4f7dfd5b2db8d0c2db55eb1114e63bb29a?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt=""></li> -->
       <li><a class="about-link" href="./pages/about/">Su di me</a></li>
-      <li><a href="./pages/contact/"><button>Contattami</button></a></li>
+      <li><a href="./pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
     </ul>
   </nav>
 
   <!-- HERO -->
   <div class="hero container col-sm-6 my-5">
     <div class="tags">
-      <div class="tag-1">Visual Designer</div>
-      <div class="tag-2">UX/UI Designer</div>
+      <div class="tag-1"><strong>Visual Designer</strong></div>
+      <div class="tag-2"><strong>UX/UI Designer</strong></div>
     </div>
-    <h1 class="intro-text">Sono Daniele ☺ <br/></h1><h2>Graphic designer con esperienza in <br>e-commerce e stampa.</h2> 
+    <h1 class="intro-text">Sono Daniele 🙂 <br/></h1><h2>Graphic designer con esperienza in <br>e-commerce e stampa.</h2> 
     
     <section class="links">
       <div class="social-icons">
