--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <section class="links">
       <div class="social-icons">
         <a class="link-linkedin" href="https://www.linkedin.com/in/daniele-lessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/Linkedin.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
+          <img src="assets/img/LinkedinBN.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
         <a href="https://www.behance.net/danielelessio" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/Behance.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="assets/img/BehanceBN.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.pinterest.it/danielelessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/Pinterest.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
+          <img src="assets/img/PinterestBN.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
       </div>
     </section>
   </div>
@@ -52,14 +52,14 @@
           <div class="card__img" style="background-image: url('assets/img/copertina-sunnee.jpg');"></div>
           <div class="project-label">
             <h3 class="label-text">Sunnee ↗</h3>
-            <p>Branding ⋅ brand di abbigliamento sostenibile.</p>
+            <p>Branding | brand di abbigliamento sostenibile.</p>
           </div>
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.jpg');"></div>
         <h3> Ecodream ↗ </h3>
-        <p>UX study ⋅ brand di borse sostenibili.</p>
+        <p>UX study | brand di borse sostenibili.</p>
       </a>
 
     </div>
@@ -67,7 +67,7 @@
       <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/Logo-dea.svg');"></div>
         <h3> Dea della pizza ↗ </h3>
-        <p>Redesign ⋅ logo pizzeria.</p>
+        <p>Redesign | logo pizzeria.</p>
       </a>
       <a class="card col-md-6" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
         <div class="card__img" style="background-image: url('assets/img/copertina-curiosity-academy.svg');"></div>
