aumento contrasto pulsanti

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -104,7 +104,7 @@
                 <p class="mt-1">Ho creato materiale per e-commerce e social, stampando poi gli articoli personalizzati in prima persona. Gli acquisti settimanali sono passati da poche unità a diverse decine anche grazie al mio lavoro. <br></p>
                 <p class="mt-1">2020: Tirocinio di 250 ore presso Graitec. <br></p>
                 <p class="mt-1">Ho realizzato tour virtuali mediante 3D Vista Virtual Tour.</p>
-                <h2 class="mt-4">Links</h2>
+                <h2 class="mt-4 mb-2">Links</h2>
                 <div class="cv-links">
                     <a href="https://github.com/lessiodaniele" target="_blank">
                         <img class="social-icons github" src="../../assets/img/github.svg" alt="github-icon"> Github</a>
