--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="robots" content="noindex, nofollow" />
     <title>Daniele Lessio - Graphic Designer</title>
+    <meta>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- FONT -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
-    <script defer src="./assets/js/scripts.js"></script>
+    
+    <!-- FONT -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet"> -->
+@font-face 
+
+    <!-- SCRIPTS -->
+    <script defer src="./assets/js/scripts.js" async></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>  
 </head>
 <body>
   <nav class="nav-container ">
@@ -49,7 +59,7 @@
     <!-- TOGLI TARGET BLANK PER APRIRE LINK NELLA STESSA SCHEDA -->
     <div class="row">
       <a class="card col-md-6" href="https://www.behance.net/gallery/188212737/Sunnee-brand-di-abbigliamento-sostenibile" target="_blank">
-          <div class="card__img" style="background-image: url('assets/img/copertina-sunnee.jpg');"></div>
+          <div class="card__img sunnee"></div>
           <div class="project-label">
             <h3 class="label-text">Sunnee ↗</h3>
             <p>Branding | brand di abbigliamento sostenibile.</p>
@@ -57,7 +67,7 @@
       </a>
       
       <a  class="card col-md-6" href="https://drive.google.com/drive/folders/1kwe-d1Xh8Zx-kyY9u0POIiVDQsHv5gcj" target="_blank">
-        <div class="card__img" style="background-image: url('assets/img/copertina-ecodream.jpg');"></div>
+        <div class="card__img ecodream"></div>
         <h3> Ecodream ↗ </h3>
         <p>UX study | brand di borse sostenibili.</p>
       </a>
@@ -65,25 +75,17 @@
     </div>
     <div class="row">
       <a class="card col-md-6" href="https://drive.google.com/file/d/1Q-0yvK9JaYjSXOlWnZNGEK4fQ9X8xT3n/view?usp=sharing" target="_blank">
-        <div class="card__img" style="background-image: url('assets/img/Logo-dea.svg');"></div>
+        <div class="card__img dea"></div>
         <h3> Dea della pizza ↗ </h3>
         <p>Redesign | logo pizzeria.</p>
       </a>
       <a class="card col-md-6" href="https://www.behance.net/gallery/87077729/Contest-per-Curiosity-Academy" target="_blank">
-        <div class="card__img" style="background-image: url('assets/img/copertina-curiosity-academy.svg');"></div>
+        <div class="card__img academy"></div>
         <h3> Curiosity Academy ↗ </h3>
-        <p>Progetto contest universistario.</p>
+        <p>Progetto contest universitario.</p>
       </a>
     </div>
-    <!-- <div class="project-card col-sm-6">
-      <div class="progetto-1">
-          <div class="project-label">
-              <h2 class="label-text">Sunnee</h2>
-              <img class="label-icon" src="https://cdn.builder.io/api/v1/image/assets/TEMP/53807233b8aae38184c28023152b53f78ff7b3ed15179042bff35662c1e9bfbc?apiKey=9e8e5368cb1f4c5787c6f71f717606d8&" alt="Icona freccia" >
-          </div>
-          <img class="project-image" src="/assets/img/ricongiunzione ines.jpg" alt="Anteprima primo progetto">
-      </div>
-    </div> -->
+
   </section>
   <a href="https://www.behance.net/danielelessio" class="altro"><div>⎯⎯⎯⎯ Tutti i progetti ↗ ⎯⎯⎯⎯</div></a>
 
@@ -98,7 +100,5 @@
     </div>
   </FOOTER>
 
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
