--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -11,14 +11,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
         <meta name="robots" content="noindex, nofollow" />
+        <meta name="description" content="Curriculum di Daniele Lessio, graphic designer">
+        <meta property="og:title" content="Daniele Lessio - CV">
+        <meta property="og:description" content="Curriculum di Daniele Lessio, graphic designer">
+        <meta property="og:image" content="https://lessiodaniele.github.io/personal-portfolio/assets/img/foto-cv.jpg">
+        <meta property="og:url" content="https://lessiodaniele.github.io/personal-portfolio/pages/about/">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Daniele Lessio - Graphic Designer">
         
-        <!-- FONT -->
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet"> -->
     </head>
 
     <body>
