--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="">
-    <meta name="description" content="">
     <meta name="robots" content="noindex, nofollow" />
-    <meta property="og:title" content="Titolo del tuo contenuto" />
-    <meta property="og:description" content="Breve descrizione del contenuto" />
-    <meta property="og:image" content="URL_dell'immagine" />
+    <meta name="description" content="Portfolio di Daniele Lessio, graphic designer">
+    <meta property="og:title" content="Daniele Lessio - Portfolio">
+    <meta property="og:description" content="Portfolio di Daniele Lessio, graphic designer">
+    <meta property="og:image" content="https://lessiodaniele.github.io/personal-portfolio/assets/img/foto-cv.jpg">
+    <meta property="og:url" content="https://lessiodaniele.github.io/personal-portfolio/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Daniele Lessio - Graphic Designer">
     
-    <!-- FONT -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet"> -->
-
     <!-- SCRIPTS -->
     <script defer src="./assets/js/scripts.js" async></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous" async></script>
