--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../../assets/css/style.css">
+
     <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="description" content="Non esitare a contattarmi. Possiamo bere un caffè e far nascere una bella collaborazione o, al peggio, un&rsquo;interessante conoscenza!">
+    <meta property="og:title" content="Modulo di contatto di Daniele lessio">
+    <meta property="og:description" content="Non esitare a contattarmi. Possiamo bere un caffè e far nascere una bella collaborazione o, al peggio, un&rsquo;interessante conoscenza!">
+    <meta property="og:image" content="https://lessiodaniele.github.io/personal-portfolio/assets/img/foto-cv.jpg">
+    <meta property="og:url" content="https://lessiodaniele.github.io/personal-portfolio/pages/contact/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Daniele Lessio - Graphic Designer">
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- FONT -->
-    <!-- <style> @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');</style> -->
-
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" async></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>  
+
+    <og:title></og:title>
 </head>
 <body>
     <section class="formcarry-container">
