aggiornamento immagine og

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Portfolio di Daniele Lessio, graphic designer">
     <meta property="og:title" content="Daniele Lessio - Portfolio">
     <meta property="og:description" content="Portfolio di Daniele Lessio, graphic designer">
-    <meta property="og:image" content="https://scontent.fqpa1-1.fna.fbcdn.net/v/t39.30808-6/442452272_122107048178309046_3554330746458753733_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=DaFf8k_h4scQ7kNvgGJp6h4&_nc_ht=scontent.fqpa1-1.fna&oh=00_AYB6KCYz8__eW74dwuDEtF-tIcEW9LjJV33keD-ZPAXZMg&oe=66753EB3">
+    <meta property="og:image" content="https://lessiodaniele.github.io/personal-portfolio/assets/img/foto-cv.jpg">
     <meta property="og:url" content="https://lessiodaniele.github.io/personal-portfolio/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Daniele Lessio - Graphic Designer">
