--- a/pages eng/about/index.html
+++ b/pages eng/about/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../../assets/css/style.css">
         <link rel="icon" type="image/x-icon" href="../../assets/img/favicon.ico">
-        <title>Su di me - CV Daniele Lessio</title>
+        <title>About me - Resume Daniele Lessio</title>
         
         <!-- META -->
         <meta charset="UTF-8">
@@ -26,8 +26,8 @@
     <nav class="nav-container ">
         <a href="https://lessiodaniele.github.io/personal-portfolio/"><img class="logo" src="../../assets/img/personal-logo.png" alt="Logo personale"></a>
         <ul class="menu-container">
-            <li><a class="about-link" href="../../pages/about/">Su di me</a></li>
-            <li><a href="../../pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
+            <li><a class="about-link" href="../../pages/about/">About me</a></li>
+            <li><a href="../../pages/contact/"><button class="px-3 py-1">Contact me</button></a></li>
         </ul>
     </nav>
 
