--- a/pages eng/cookies/index.html
+++ b/pages eng/cookies/index.html
@@ -17,6 +17,7 @@ Ai fini della presente Politica sui cookie:
 
 Società (indicata come "la Società", "Noi", "Ci" o "Nostro" nella presente Politica sui cookie) si riferisce a Daniele Lessio.
 Per cookie si intendono i file di piccole dimensioni che vengono inseriti nel computer, nel dispositivo mobile o in qualsiasi altro dispositivo dell'utente da un sito web e che contengono, tra le altre cose, i dettagli della cronologia di navigazione dell'utente su quel sito web.
+Sito web si riferisce a Federico Pozzato, accessibile da https://www.federicopozzato.it/.
 Per Utente si intende l'individuo che accede o utilizza il Sito, o una società, o qualsiasi persona giuridica per conto della quale tale individuo accede o utilizza il Sito, a seconda dei casi.
 
 L'uso dei cookie
