--- a/pages eng/index.html
+++ b/pages eng/index.html
@@ -32,7 +32,7 @@
     <ul class="menu-container">
       <li><a class="about-link" href="./pages eng/about/">About me</a></li>
       <li><a href="./pages eng/contact/"><button class="px-3 py-1">Contact me</button></a></li>
-      <li><a href="./pages eng/"><button class="px-3 py-1">ITA</button></a></li>
+      <li><a href="./index.html"><button class="px-3 py-1">ITA</button></a></li>
     </ul>
   </nav>
 
@@ -47,11 +47,11 @@
     <section class="links">
       <div class="social-icons">
         <a class="link-linkedin" href="https://www.linkedin.com/in/daniele-lessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/LinkedinBN.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
+          <img src="../assets/img/LinkedinBN.svg" alt="collegamento a linkedin" class="link-linkedin" /></a>
         <a href="https://www.behance.net/danielelessio" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/BehanceBN.svg" alt="collegamento a behance" class="link-behance" /></a>
+          <img src="../assets/img/BehanceBN.svg" alt="collegamento a behance" class="link-behance" /></a>
         <a href="https://www.pinterest.it/danielelessio/" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/PinterestBN.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
+          <img src="../assets/img/PinterestBN.svg" alt="collegamento a Pinterest" class="link-pinterest" /></a>
       </div>
     </section>
   </div>
@@ -98,7 +98,7 @@
     <div class="footer">
       <P class="footer-info">ⓒ 2024 Portfolio of Daniele Lessio <br> Special thanks to myself and ChatGPT <br> I authorize the processing of personal data contained in my resume under Reg. 2016/679/EU.</P>
       <ul class="menu-container">
-        <li><a href="../assets/img/CV-Daniele-Lessio.pdf" download>Resume download ↓</a></li>
+        <li><a href="../assets/img/CV-Daniele-Lessio.pdf" download>Resumé download ↓</a></li>
       </ul>
     </div>
   </FOOTER>
