traduz<ione pag about me

--- a/pages-eng/about/index.html
+++ b/pages-eng/about/index.html
@@ -41,24 +41,23 @@
                 <h2>
                     Su di me
                 </h2>
-                <p>Sono Daniele Lessio da Treviso, laureato in Scienze della Comunicazione Grafica e Multimediale. </p>
-                <p class="mt-1">Da 3 anni studio e lavoro come grafico, ottenendo esperienza nella creazione di contenuti sia lato web sia lato cartaceo. </p>
-                <p class="mt-1">La mia formazione comprende diverse applicazioni della grafica, dalla stampa a web-design e montaggio video.</p>
-                <p class="mt-1">Lavorando ho approfondito la mia conoscenza del CMS Wordpress e ho affinato le mie skill in team a progetti destinati alla stampa e alla cartotecnica.</p>
-                <p class="mt-1">Ho buona padronanza della suite Adobe per i miei progetti creativi, ma amo anche illustrare a mano libera i progetti che necessitano più carattere e sperimentare con il 3D.</p>
+                <p>I am Daniele Lessio from Treviso, Italy, a graduate in Graphic and Multimedia Communication Sciences. </p>
+                <p class="mt-1">For the past 3 years I have been studying and working as a graphic designer, gaining experience in both web-side and print-side content creation.</p>
+                <p class="mt-1">While working, I deepened my knowledge of the Wordpress CMS and honed my skills in teaming up on projects intended for printing and papermaking...</p>
+                <p class="mt-1">I have good command of the Adobe suite for my creative projects, but I also love to freehand illustrate projects that need more character and experiment with 3D.</p>
                 <h2 class="mt-4">
-                    Cosa faccio
+                    What I do
                 </h2>
                 <div class="row">
                     <p class="col-6">
-                    Branding Visual <br> Design <br> Grafica digitale
+                    Branding Visual <br> Design <br> Digital graphics
                 </p>
                     <p class="col-6">
-                        Grafica editoriale <br> Illustrazioni <br> Web design
+                        Editorial graphics <br> Illustrazions <br> Web design
                     </p>
                 </div>
                 <h2 class="mt-4">
-                    Per farlo
+                    How I do it
                 </h2>
                 <ul>
                     <li>Adobe Creative Suite</li>
@@ -69,22 +68,22 @@
                 </ul>
                 <div class="row">
                     <h2 class="mt-4">
-                        Interessi
+                        Interests
                     </h2>
                     <p class="col-6">
-                        Fotografia<br>
+                        Photography<br>
                         Web Design<br>
                         UX/UI<br>
                         Design Branding<br>
-                        Sostenibilità<br>
+                        Sostenibility<br>
                         Cinema
                     </p>
                     <p class="col-6">
-                        Tecnologia<br>
-                        Innovazione<br>
+                        Tecnology<br>
+                        Innovation<br>
                         Videogames<br>
-                        Illustrazione<br>
-                        Tipografia<br>
+                        Illustration<br>
+                        Tipography<br>
                     </p>
     
                 </div>
@@ -93,25 +92,25 @@
             <!-- colonna 2 -->
             <div class="col-md-6">
                 <h2>
-                    Formazione
+                    Education
                 </h2>
-                <p>Attuale: <strong>Master</strong> in <strong>UX/UI design</strong> di Start2Impact.</p>
-                <p class="mt-1">2018-2021: Laurea triennale in Scienze e tecniche della comunicazione grafica e multimediale, IUSVE.</p>
-                <h class="mt-4">Esperienza</h\2>
-                <p>Apr-Dicembre 2023: Grafico stampatore in Gielle. <br></p>
+                <p>Current: <strong>Master</strong> in <strong>UX/UI design</strong> with Start2Impact.</p>
+                <p class="mt-1">2018-2021: Bachelor's degree in Graphic and Multimedia Communication Sciences and Techniques, IUSVE.</p>
+                <h class="mt-4">Esperience</h\2>
+                <p>Apr-Dec 2023: Graphic printer in Gielle. <br></p>
                 <p class="mt-1">
-                Ho controllato e stampato le grafiche fornite dai clienti su diversi supporti, principalmente tramite stampa digitale e sublimazione.</p>
+                    I checked and printed graphics provided by clients on various media, mainly by digital printing and sublimation.</p>
                 <p class="mt-1">Gen-Feb 2023: Stage in Grafiche Antiga. <br></p>
-                <p class="mt-1">Mi sono occupato della completa impaginazione di un catalogo e di altri elaborati per la stampa. Ho poi lavorato in supporto al team di project management nella produzione di espositori in cartotecnica per Essilor-Luxottica. <br></p>
-                <p class="mt-1">2020-2023: Collaboratore autonomo come <strong>Visual designer</strong> in Digitalshirt.it. <br></p>
-                <p class="mt-1">Ho creato materiale per e-commerce e social, stampando poi gli articoli personalizzati in prima persona. Gli acquisti settimanali sono passati da poche unità a diverse decine anche grazie al mio lavoro. <br></p>
-                <p class="mt-1">2020: Tirocinio di 250 ore presso Graitec. <br></p>
-                <p class="mt-1">Ho realizzato tour virtuali mediante 3D Vista Virtual Tour.</p>
+                <p class="mt-1">I was responsible for the complete layout of a catalog and other print work. I then worked in support of the project management team in the production of paperboard displays for Essilor-Luxottica. <br></p>
+                <p class="mt-1">2020-2023: Independent contractor as <strong>Visual designer</strong> in Digitalshirt.it. <br></p>
+                <p class="mt-1">I created material for e-commerce and social, then printed the customized items myself. Weekly purchases went from a few units to several dozen also thanks to my work. <br></p>
+                <p class="mt-1">2020: 250-hour internship at Graitec. <br></p>
+                <p class="mt-1">I have made virtual tours using 3D Vista Virtual Tour.</p>
                 <h2 class="mt-4">
-                    Lingue
+                    Linguages
                 </h2>
                 <p>
-                    Inglese, Italiano.
+                    English, Italian.
                 </p>
                 <h2 class="mt-4 mb-2">Links</h2>
                 <div class="cv-links">
@@ -122,7 +121,7 @@
                     </div>
             </div>
             <div class="cv">
-                <a href="../../assets/img/CV-Daniele-Lessio.pdf" download><button class="py-1 px-3">Scarica CV ↓</button></a>
+                <a href="../../assets/img/CV-Daniele-Lessio.pdf" download><button class="py-1 px-3">Resumé download ↓</button></a>
 
             </div>
     
@@ -132,9 +131,9 @@
         <!-- FOOTER -->
   <FOOTER>
     <div class="footer">
-      <P class="footer-info">ⓒ 2024 Portfolio di Daniele Lessio <br> Un ringraziamento speciale a me stesso e a ChatGPT <br>Autorizzo al trattamento dei dati personali contenuti nel mio curriculum vitae in base Reg. 2016/679/UE.</P>
+      <P class="footer-info">ⓒ 2024 Portfolio of Daniele Lessio <br> Special thanks to myself and ChatGPT <br> I authorize the processing of personal data contained in my resume under Reg. 2016/679/EU.</P>
       <ul class="menu-container">
-        <li><a href="assets/img/CV-Daniele-Lessio.pdf" download>Scarica CV ↓</a></li>
+        <li><a href="assets/img/CV-Daniele-Lessio.pdf" download>Resumé download ↓</a></li>
       </ul>
     </div>
   </FOOTER>
