ricollegamento pagine eng

--- a/pages-eng/index.html
+++ b/pages-eng/index.html
@@ -28,10 +28,10 @@
 </head>
 <body>
   <nav class="nav-container">
-    <a href="../pages eng/"><img class="logo"src="../assets/img/personal-logo.png" alt="Personal logo"></a>
+    <a href="../pages-eng/"><img class="logo"src="../assets/img/personal-logo.png" alt="Personal logo"></a>
     <ul class="menu-container">
-      <li><a class="about-link" href="./pages eng/about/">About me</a></li>
-      <li><a href="./pages eng/contact/"><button class="px-3 py-1">Contact me</button></a></li>
+      <li><a class="about-link" href="./pages-eng/about/">About me</a></li>
+      <li><a href="./pages-eng/contact/"><button class="px-3 py-1">Contact me</button></a></li>
       <li><a href="../"><button class="px-3 py-1">ITA</button></a></li>
     </ul>
   </nav>
