--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <ul class="menu-container">
       <li><a class="about-link" href="./pages/about/">Su di me</a></li>
       <li><a href="./pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
-      <li><a href="./pages eng/"><button class="px-3 py-1">ENG</button></a></li>
+      <li><a href="./pages-eng/"><button class="px-3 py-1">ENG</button></a></li>
     </ul>
   </nav>
 
