correzione link about me

--- a/pages-eng/about-eng/index.html
+++ b/pages-eng/about-eng/index.html
@@ -133,7 +133,7 @@
     <div class="footer">
       <P class="footer-info">ⓒ 2024 Portfolio of Daniele Lessio <br> Special thanks to myself and ChatGPT <br> I authorize the processing of personal data contained in my resume under Reg. 2016/679/EU.</P>
       <ul class="menu-container">
-        <li><a href="assets/img/CV-Daniele-Lessio.pdf" download>Resumé download ↓</a></li>
+        <li><a href="../../assets/img/Daniele-Lessio-Resume.pdf" download>Resumé download ↓</a></li>
       </ul>
     </div>
   </FOOTER>
