correzione collegamento pagine a modulo di contatto

--- a/pages-eng/index.html
+++ b/pages-eng/index.html
@@ -31,7 +31,7 @@
     <a href="../pages-eng/"><img class="logo"src="../assets/img/personal-logo.png" alt="Personal logo"></a>
     <ul class="menu-container">
       <li><a class="about-link" href="./about-eng/">About me</a></li>
-      <li><a href="./contact/"><button class="px-3 py-1">Contact me</button></a></li>
+      <li><a href="../pages/contact/"><button class="px-3 py-1">Contact me</button></a></li>
       <li><a href="../"><img class="ita-switch" src="../assets/img/italian.png"></img></a></li>
     </ul>
   </nav>
