cambiata colonna contenuto principale

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   
   <!-- PROGETTI -->
-  <section class="container col-sm-6 projects-section">
+  <section class="container col-md-6 projects-section">
 
     <!-- TOGLI TARGET BLANK PER APRIRE LINK NELLA STESSA SCHEDA -->
     <div class="row">
