--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </nav>
 
   <!-- HERO -->
-  <div class="hero container col-sm-6 my-5">
+  <div class="hero container col-md-6 my-5">
     <div class="tags">
       <div class="tag-1"><strong>Visual Designer</strong></div>
       <div class="tag-2"><strong>UX/UI Designer</strong></div>
